[gd_scene load_steps=8 format=3 uid="uid://y5m717rfnc30"]

[ext_resource type="Script" path="res://script/game.gd" id="1_gdixo"]
[ext_resource type="PackedScene" uid="uid://dfr36sejdm04d" path="res://scene/Levels/tutorial.tscn" id="2_x3ken"]
[ext_resource type="Script" path="res://script/Logic.gd" id="3_plwna"]
[ext_resource type="Script" path="res://script/weapons/Pistol.gd" id="4_8cd2e"]
[ext_resource type="Script" path="res://script/abilities/Dash.gd" id="5_3gdox"]
[ext_resource type="PackedScene" uid="uid://db6d61i8omd24" path="res://scene/door.tscn" id="5_44vux"]
[ext_resource type="PackedScene" uid="uid://ljyyn0jvnj1q" path="res://scene/key.tscn" id="5_mwx1c"]

[node name="Game" type="Node2D"]
script = ExtResource("1_gdixo")

[node name="Tutorial" parent="." instance=ExtResource("2_x3ken")]
position = Vector2(4, -10)

[node name="Door" type="Node2D" parent="Tutorial"]
position = Vector2(-4, 10)

[node name="Door" parent="Tutorial/Door" instance=ExtResource("5_44vux")]
position = Vector2(304, 14)

[node name="Level1" type="Node2D" parent="."]

[node name="Level2" type="Node2D" parent="."]

[node name="Level3" type="Node2D" parent="."]

[node name="Logic" type="Node2D" parent="."]
script = ExtResource("3_plwna")

[node name="Objects" type="Node2D" parent="."]

[node name="Pistol" type="Node2D" parent="Objects"]
script = ExtResource("4_8cd2e")
attack_speed = 0.4

[node name="Marker2D" type="Marker2D" parent="Objects/Pistol"]
position = Vector2(30, 0)

[node name="Sprite2D" type="Sprite2D" parent="Objects/Pistol"]

[node name="Timer" type="Timer" parent="Objects/Pistol"]

[node name="Key" type="Node2D" parent="Objects"]

[node name="key" parent="Objects/Key" instance=ExtResource("5_mwx1c")]
position = Vector2(531, 167)

[node name="Key2" type="Node2D" parent="Objects"]

[node name="key" parent="Objects/Key2" instance=ExtResource("5_mwx1c")]
position = Vector2(100, 72)

[node name="Abilities" type="Node2D" parent="."]

[node name="Dash" type="Node2D" parent="Abilities"]
script = ExtResource("5_3gdox")

[node name="Timer" type="Timer" parent="Abilities/Dash"]
one_shot = true
